# PE_Bloc_T

./: CMakeLists.txt  README.md  config.json  resultats_tots.csv  run_linux.sh  run_windows.ps1
algs/: linear_scan.cpp  log_halving.cpp  mergesort.cpp  qs.cpp  quadratic_bench.cpp
include/: metrics.hpp
man/: manual.md
utils_python/: README.md  __init__.py  requirements.txt
utils_python/agreement_plots/: __init__.py  generate_agreement_plots.py  infer_dlog_stats.py
utils_python/agreement_stats/: __init__.py  infer_dcpu_stats.py
utils_python/basic_reports/: __init__.py  run_analysis.py
utils_python/rss_stats/: __init__.py  infer_drss_stats.py
utils_python/sortides/agreement_stats/: dlog_inference.csv
utils_python/sortides/basic_reports/: taula1_temps_per_os_alg.csv  taula2_cpu_per_os_alg.csv  taula3_mem_per_os_alg.csv  temps_mig_per_os_alg_n.csv
utils_python/sortides/dcpu_stats/: dcpu_inference.csv
utils_python/sortides/rss_stats/: drss_stats.csv  taula6_rss_per_os_alg.csv
